# imgui-transfer-function

./: .gitignore  CMakeLists.txt  README.md  embedded_colormaps.h  main.cpp  stb_image_write.h  transfer_function_widget.cpp  transfer_function_widget.h
example/: CMakeLists.txt  imgui_impl_opengl3.h  main.cpp  shader.cpp
example/cmake/: FindSDL2.cmake
example/imgui/: CMakeLists.txt
util/: CMakeLists.txt  embed_image.cpp
